# wordclock

./: .gitignore  404.html  Cargo.toml  ConfigServer.hpp  Controller.hpp  Display.hpp  LICENSE.txt  NetworkTime.hpp  OpenWeather.hpp  README.md  book.toml  bug_avoided.html  developer_setup.html  esp32_learnings.html  index.html  print.html  release_process.html  rust-toolchain.toml  searchindex.js  searchindex.json  user_guide_hw_v1.html  user_guide_hw_v2.html  version.txt
.cargo/: config.toml
3d printed/: calibration.stl  frame_corner.stl  frame_corner_M.stl  frame_corner_bottom.stl  grid.stl  grid_v2.stl  leds_dot_frame.stl  leds_frame.stl  leds_frame_v2.stl  leds_frame_v2_framed.stl  matrix_clip.stl  matrix_solder_helper.stl  printed_side.stl  printed_side_supported.stl  side_support.stl  socle.stl  stencil.stl  stencil_bern-1_5.stl  stencil_bern-2.stl  stencil_bern.stl  stencil_framed.stl  stencil_holder.stl  stencil_holder_dummy.stl  stencil_holder_v2.stl  zwoi_oxyd.stl
architecture/: 12_glossary.html  1_introduction_and_goals.html  2_constraints.html  3_context_and_scope.html  4_solution_strategy.html  5_building_block_view.html  7_deployment_view.html  8_crosscutting_concepts.html  9_architecture_decisions.html
build-description/: build.py  xtensa_esp32_gcc.py
crates/cross_compiled/: Cargo.toml  esp32_ota_partitions.csv  sdkconfig.defaults
crates/cross_compiled/src/: ds3231_board_rtc.rs  esp32_soc.rs  firmware_update.rs  http_server.rs  led_driver.rs  lib.rs  main.rs  network.rs  network_time.rs  ota_update.rs  persistent_settings.rs  rgb_led_strip_matrix.rs
crates/cross_compiled/tests/: display.rs  network.rs  ota.rs
doc/: SUMMARY.md  bug_avoided.md  developer-setup.md  developer_setup.md  esp32_learnings.md  release_process.md  user_guide_hw_v1.md  user_guide_hw_v2.md
firmware/: ConfigServer.hpp  Controller.hpp  Display.hpp  FirmwareOverTheAir.hpp  FlashFs.hpp  Ledmatrix.hpp  Life.hpp  NetworkTime.hpp  firmware.cpp
ota-image/: version.txt
(+60 files in other folders)
