[package]
name = "hello-world"
version = "0.1.0"
authors = ["louismayencourt <louis.mayencourt@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.36"
embedded-hal = "0.2"
epd-waveshare = "0.5.0"

[build-dependencies]
embuild = "0.30.4"
