[package]
name = "cross_compiled"
version = "0.1.0"
authors = ["louismayencourt <louis.mayencourt@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
# Follow the hint in https://github.com/johnthagen/min-sized-rust to reduce the binary size
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.0"
log = "0.4.17"
smart-leds = { version = "0.3.0" }

esp-idf-svc = {version = "0.45.0", features = ["experimental"]}
esp-idf-sys = {version = "0.32", features = ["binstart"] }
esp-idf-hal = "0.40"
embedded-hal = "0.2"
embedded-svc = {version = "0.24"}

application = {path = "../application"}

[build-dependencies]
embuild = "0.30.4"
